@@ -3,7 +3,7 @@ mod_name=PortableCrafting
 
 major_version=1
 minor_version=0
-build_number=1
+build_number=2
 
 curse_id=240655
 release_type=release
